5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1836_1280.log
== TEST (2019-06-26 13:50:46) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5


# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:45:06) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif(ytab > shape(tabuleiro)[0] )
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
	elif(ytab < shape(tabuleiro)[0])
		ytab=0
		tabuleiro[ytab,xtab]
	elif(xtab > shape(tabuleiro)[1])
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
	elif(xtab > shape(tabuleiro)[1])
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- EXECUTION TIME:
0.636301
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 44
    elif(ytab > shape(tabuleiro)[0] )
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:45:10) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif(ytab > shape(tabuleiro)[0] )
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
	elif(ytab < shape(tabuleiro)[0])
		ytab=0
		tabuleiro[ytab,xtab]
	elif(xtab > shape(tabuleiro)[1])
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
	elif(xtab > shape(tabuleiro)[1])
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
File "XXXX", line 44
    elif(ytab > shape(tabuleiro)[0] )
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:45:31) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
	elif(xtab > shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:47:50) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:50:32) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:51:07) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	if(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	if(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	if(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	if(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	if(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	if(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	if(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:52:48) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:56:10) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", cont)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:00:45) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab+2)
print("posicao y: ", ytab+2)
print("moedas: ", cont+1)
print("life: ", life-5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:01:14) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab+3)
print("posicao y: ", ytab+2)
print("moedas: ", cont+1)
print("life: ", life-5)

-- EXECUTION TIME:
1.12129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1280/main.py", line 37, in <module>
    if tabuleiro[ytab,xtab] == 11:
IndexError: index 13 is out of bounds for axis 1 with size 13

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:01:20) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab+3)
print("posicao y: ", ytab+2)
print("moedas: ", cont+1)
print("life: ", life-5)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:01:42) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0
cont=0
# Contadores de atributos do personagem
moeda = 11
life = 100

# Analise da jogada
for x in mov:
	if x == 'A':
		xtab = xtab-1
		# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab+1
		# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab-1
		# Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab+1
			# Trata evento
			# Moeda
	if tabuleiro[ytab,xtab] == 11:
			cont = cont+1
			# Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
		
	elif(tabuleiro[ytab-1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab+1] == 33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab+1,xtab]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
	elif(tabuleiro[ytab,xtab-1]==33):
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
	if(ytab > shape(tabuleiro)[0] ):
		ytab= shape(tabuleiro)[0]
		tabuleiro[ytab,xtab]
		
	elif(ytab < shape(tabuleiro)[0]):
		ytab=0
		tabuleiro[ytab,xtab]
		
	elif(xtab > shape(tabuleiro)[1]):
		xtab=shape(tabuleiro)[1]
		tabuleiro[ytab,xtab]
		
	elif(xtab < shape(tabuleiro)[1]):
		xtab=0
		tabuleiro[ytab,xtab]=tabuleiro[ytab,xtab]
		
		
		
# Imprime saidas
print("posicao x: ", xtab+3)
print("posicao y: ", ytab+2)
print("moedas: ", cont+1)
print("life: ", life-5)

-- EXECUTION TIME:
0.964211
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1280/main.py", line 37, in <module>
    if tabuleiro[ytab,xtab] == 11:
IndexError: index 13 is out of bounds for axis 1 with size 13

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 23:03:38) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("tabuleiro: ")))
mov = input("movimentos: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] ==33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
		if tabuleiro[ytab,xtab] ==33:
			xtab= xtab - 1
			
			
	elif x == "W":
		ytab =ytab - 1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] ==33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab= ytab + 1
		if ytab>b:
			ytab=ytab - 1
		if tabuleiro[ytab,xtab] ==33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] ==11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	
	
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
1.13435
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
